--- a/src/main.scss
+++ b/src/main.scss
@@ -39,9 +39,19 @@ body {
     align-items: center;
     justify-content: center;
     gap: 1rem;
-    button {
-      font-size: 1rem;
-      padding: 0.5rem;
-    }
+  }
+}
+.button {
+  font-size: 1rem;
+  padding: 0.5rem;
+}
+
+.setCounter {
+  form {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    gap: 1rem;
   }
 }
