--- a/src/main.scss
+++ b/src/main.scss
@@ -55,3 +55,70 @@ body {
     gap: 1rem;
   }
 }
+
+.card {
+  display: flex;
+  flex-direction: column;
+  padding: 1rem;
+  border-radius: 1rem;
+  border: 1px solid rgb(172 115 166);
+  width: 50%;
+  gap: 1rem;
+}
+
+.menuItems {
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+}
+
+.item {
+  border-radius: 1rem;
+  border: 1px solid rgb(172 115 166);
+  padding: 1rem;
+
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+
+  .formContainer {
+    display: flex;
+    justify-content: space-between;
+  }
+
+  form {
+    display: flex;
+    flex-direction: row;
+    input {
+      width: 5rem;
+    }
+
+    .currencyinput {
+      span {
+        padding: 0 0.2rem;
+        color: rgb(28 28 28);
+        background-color: rgb(172 115 166);
+      }
+    }
+
+    label {
+      display: flex;
+      flex-direction: column;
+      gap: 0.5rem;
+    }
+  }
+
+  .total {
+    text-align: right;
+    display: flex;
+    flex-direction: column;
+    gap: 0.5rem;
+  }
+
+  .remove {
+    align-self: flex-end;
+    border: 1px solid rgb(243 116 105);
+    color: rgb(243 116 105);
+    background-color: transparent;
+  }
+}
