--- a/src/main.scss
+++ b/src/main.scss
@@ -21,41 +21,6 @@ body {
   justify-content: center;
 }
 
-.counter {
-  height: 600px;
-  width: 400px;
-  display: flex;
-  flex-direction: column;
-  justify-content: space-around;
-  align-items: center;
-  border: 1px solid rgb(172 115 166);
-
-  .count {
-    font-size: 2.5rem;
-  }
-
-  .controlls {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    gap: 1rem;
-  }
-}
-.button {
-  font-size: 1rem;
-  padding: 0.5rem;
-}
-
-.setCounter {
-  form {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    gap: 1rem;
-  }
-}
-
 .card {
   display: flex;
   flex-direction: column;
@@ -89,16 +54,10 @@ body {
   form {
     display: flex;
     flex-direction: row;
+    gap: 1rem;
+
     input {
       width: 5rem;
-    }
-
-    .currencyinput {
-      span {
-        padding: 0 0.2rem;
-        color: rgb(28 28 28);
-        background-color: rgb(172 115 166);
-      }
     }
 
     label {
@@ -114,11 +73,74 @@ body {
     flex-direction: column;
     gap: 0.5rem;
   }
+}
 
-  .remove {
+.currencyinput {
+  display: flex;
+
+  span {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    color: rgb(28 28 28);
+    background-color: rgb(172 115 166);
+    width: 1rem;
+    border-bottom-left-radius: 0.25rem;
+    border-top-left-radius: 0.25rem;
+  }
+
+  input {
+    flex: 1;
+    border-bottom-left-radius: 0;
+    border-top-left-radius: 0;
+  }
+}
+
+input {
+  border-radius: 0.25rem;
+  border: 0;
+  padding: 0.5rem;
+}
+
+.newItemForm {
+  form {
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+
+    label {
+      display: flex;
+      flex-direction: column;
+      gap: 0.5rem;
+    }
+  }
+}
+
+.button {
+  font-size: 1rem;
+  padding: 0.5rem;
+  cursor: pointer;
+  border-radius: 0.5rem;
+  transition: all ease-in-out 100ms;
+
+  &-remove {
     align-self: flex-end;
     border: 1px solid rgb(243 116 105);
-    color: rgb(243 116 105);
     background-color: transparent;
+    color: rgb(243 116 105);
+
+    &:hover {
+      background-color: rgba(243, 116, 105, 0.25);
+    }
+  }
+
+  &-add {
+    border: 1px solid rgb(143 208 240);
+    background-color: transparent;
+    color: rgb(143 208 240);
+
+    &:hover {
+      background-color: rgba(143, 208, 240, 0.25);
+    }
   }
 }
