--- a/src/main.scss
+++ b/src/main.scss
@@ -17,41 +17,34 @@ body {
 .app {
   height: 100%;
   display: flex;
-  align-items: center;
   justify-content: center;
+  gap: 4rem;
+  margin: 0 4rem;
 }
 
-.counter {
-  height: 600px;
-  width: 400px;
+.humans,
+.tasks {
+  flex: 1;
   display: flex;
   flex-direction: column;
-  justify-content: space-around;
-  align-items: center;
-  border: 1px solid rgb(172 115 166);
+  gap: 2rem;
 
-  .count {
-    font-size: 2.5rem;
-  }
-
-  .controlls {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    gap: 1rem;
-  }
-}
-.button {
-  font-size: 1rem;
-  padding: 0.5rem;
-}
-
-.setCounter {
   form {
     display: flex;
     flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    gap: 1rem;
+    gap: 0.5rem;
+
+    input {
+      padding: 0.5rem;
+      border: 0;
+      border-radius: 0.25rem;
+    }
   }
+}
+
+.humansList,
+.tasksList {
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
 }
