--- a/src/main.scss
+++ b/src/main.scss
@@ -33,18 +33,59 @@ body {
     display: flex;
     flex-direction: column;
     gap: 0.5rem;
-
-    input {
-      padding: 0.5rem;
-      border: 0;
-      border-radius: 0.25rem;
-    }
   }
+}
+
+.input {
+  padding: 0.5rem;
+  border: 0;
+  border-radius: 0.25rem;
+  border: 1px solid rgb(178 91 173);
+  background-color: transparent;
+  color: rgb(197 197 197);
 }
 
 .humansList,
 .tasksList {
   display: flex;
   flex-direction: column;
+  gap: 1.5rem;
+}
+
+.human {
+  display: flex;
+  align-items: center;
+  justify-content: flex-start;
+  border: 1px solid rgb(178 91 173);
+  border-radius: 0.25rem;
+  padding: 1rem;
+
+  &_name {
+    font-size: 2rem;
+  }
+}
+
+.task {
+  border: 1px solid rgb(178 91 173);
+  border-radius: 0.25rem;
+  flex-direction: column;
+  justify-content: flex-start;
   gap: 1rem;
+  padding: 1rem;
+  display: flex;
+
+  &_title {
+    display: flex;
+    align-items: center;
+    gap: 0.5rem;
+
+    font-size: 1.5rem;
+    font-weight: bold;
+  }
+
+  select {
+    border: 1px solid rgb(178 91 173);
+    background-color: transparent;
+    color: rgb(197 197 197);
+  }
 }
