--- a/src/main.scss
+++ b/src/main.scss
@@ -53,12 +53,13 @@ body {
 }
 
 .human {
-  display: flex;
-  align-items: center;
-  justify-content: flex-start;
   border: 1px solid rgb(178 91 173);
   border-radius: 0.25rem;
+  justify-content: flex-start;
   padding: 1rem;
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
 
   &_name {
     font-size: 2rem;
