--- a/src/main.scss
+++ b/src/main.scss
@@ -53,7 +53,7 @@ body {
 }
 
 .human {
-  border: 1px solid rgb(178 91 173);
+  border: 2px solid rgba(178, 91, 173, 0.25);
   border-radius: 0.25rem;
   justify-content: flex-start;
   padding: 1rem;
@@ -67,7 +67,7 @@ body {
 }
 
 .task {
-  border: 1px solid rgb(178 91 173);
+  border: 1px solid rgba(178, 91, 173, 0.5);
   border-radius: 0.25rem;
   flex-direction: column;
   justify-content: flex-start;
